# jump_to

./: .gitignore  README.md
_django/: .pre-commit-config.yaml  README.md  db.sqlite3  pyproject.toml
_django/config/: settings.py  urls.py
_django/docs/: 0_README.md  1_장고개념.md  2_뷰와URL.md  3_마이그레이션.md  4_기능구현.md
_django/pybo/: admin.py  form.py  models.py  urls.py  views.py
_django/pybo/migrations/: 0001_initial.py
_django/templates/: base.html
_django/templates/pybo/: question_form.html
